--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,10 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.25.0'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutine_version"
 
+    testImplementation 'app.cash.turbine:turbine:0.7.0'
+    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.1.0"
+
 
 
 }
